--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.3.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   }
 }
