--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serverstart": "DEBUG=club-house:* npm run devstart"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
